apps/jjinbbang-api/overlays/legacy/delete-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jjinbbang-api
